--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helivelton</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="scripts/main.min.js"></script>
+    <link rel="stylesheet" href="style.min.css">
+    <script src="main.min.js"></script>
     <style>
         /* Styles moved to style.scss */
     </style>
@@ -37,4 +37,4 @@
         </footer>
     </div>
 </body>
-</html>
+</html> 
