--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Helivelton</title>
+    <title>Helivelton - Software Engineer</title>
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="style.min.css">
     <script src="main.min.js"></script>
     <style>
-        /* Styles moved to style.scss */
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
-            <h1>Helivelton Barbosa</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h1>Helivelton Gomes Barbosa</h1>
+            <p>Software Engineer</p>
+            <p><small>Brazil</small></p>
         </header>
+
         <section>
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+            <p>Software Engineer with a Bachelor's degree in Software Engineering from Universidade Estácio de Sá
+                (2021-2025) and a technical degree in Computer Science from Instituto Federal de Alagoas (2009-2012).
+                Currently working as a software engineer at <a class="link" href="https://tidy.com"
+                    target="_blank">Tidy</a>.</p>
+            <p>Previously worked as Software Engineer II at Centro de Estudos e Sistemas Avançados do Recife (CESAR)
+                from 2021 to 2023, gaining valuable experience in software development and engineering practices.</p>
         </section>
+
+        <section>
+            <h2>Education</h2>
+            <ul>
+                <li><strong>Bachelor's in Software Engineering</strong> (2021-2025)<br>
+                    Universidade Estácio de Sá, Brazil</li>
+                <li><strong>Technical Degree in Computer Technician</strong> (2009-2012)<br>
+                    Instituto Federal de Alagoas - Campus Palmeira dos Índios, Brazil</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Professional Experience</h2>
+            <ul>
+                <li><strong>Software Engineer</strong> (2017 - Present)<br>
+                    Tidy<br>
+                    <em>Full Stack Developer</em>
+                </li>
+                <li><strong>Software Engineer II</strong> (2021-2023)<br>
+                    Centro de Estudos e Sistemas Avançados do Recife (CESAR)<br>
+                    <em>Software Engineer</em>
+                </li>
+                <li><strong>Research Scholarship Student</strong> (2012)<br>
+                    Instituto Federal de Alagoas<br>
+                    <em>PIBICT research program focused on karate athletes' reaction time evaluation</em>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Languages</h2>
+            <ul>
+                <li><strong>Portuguese:</strong> Native - Excellent comprehension, speaking, writing, and reading</li>
+                <li><strong>English:</strong> Proficient <a class="link"
+                        href="https://certs.duolingo.com/9tmzx54ptkuk6n1f" target="_blank">(Upper Intermediate: CEFR
+                        B2)</a> - Good comprehension, speaking, writing, and reading</li>
+            </ul>
+        </section>
+
         <section>
             <h2>Projects</h2>
             <ul>
-                <li>Project 1: Lorem ipsum dolor sit amet.</li>
+                <li><strong>Karate Athletes Reaction Time Evaluation Tool</strong> (2012)<br>
+                    Developed a specialized tool using computer science and electronics techniques to measure segmental
+                    reaction time in karate athletes. The project aimed to provide technical analysis data to help
+                    athletes improve their performance by comparing their reaction times with personal and reference
+                    data.</li>
             </ul>
         </section>
+
+        <section>
+            <h2>Additional Training</h2>
+            <ul>
+                <li>Mobile Game Development (UNEB, 2011)</li>
+                <li>Robot Virtualization Laboratory (UNEB, 2011)</li>
+                <li>Advanced Ginga-NCL Programming with Lua (CESMAC, 2010)</li>
+                <li>Python Programming for Mobile Devices (CESMAC, 2010)</li>
+                <li>LUA Language Programming (CESMAC, 2010)</li>
+                <li>Entrepreneurship Course (IFAL, 2010)</li>
+                <li>Shell Script (UFAL, 2009)</li>
+                <li>Joomla Content Management (IFAL, 2009)</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Academic Profiles</h2>
+            <ul>
+                <li><strong>Lattes CV:</strong> <a href="https://lattes.cnpq.br/3894640423692196"
+                        target="_blank">3894640423692196</a></li>
+                <li><strong>ORCID:</strong> <a href="https://orcid.org/0000-0002-0179-4979"
+                        target="_blank">0000-0002-0179-4979</a></li>
+            </ul>
+        </section>
+
         <section>
             <h2>Contact</h2>
             <p>Email: <a href="mailto:helivelton.gomes@gmail.com" id="contact-email">
-                helivelton.gomes@gmail.com
-            </a></p>
+                    helivelton.gomes@gmail.com
+                </a></p>
         </section>
+
         <footer>
-            <p>&copy; <span id="year"></span> Helivelton Barbosa</p>
+            <p>&copy; <span id="year"></span> Helivelton Gomes Barbosa</p>
         </footer>
     </div>
 </body>
-</html> 
+
+</html>
